sumo/tests/traci/VariableRetrieval/POI/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 167 69 xxx
simstep 6 1
